@@ -36,6 +36,7 @@ if not ""%2"" == "cluster" (
 
 set "JAVA_OPT=%JAVA_OPT% -jar "%BASE_DIR%\target\nacos-server.jar""
 set "JAVA_OPT=%JAVA_OPT% -Dnacos.home="%BASE_DIR%""
+set "JAVA_OPT=%JAVA_OPT% -Djava.ext.dirs="%BASE_DIR%\plugins\cmdb""
 set "JAVA_OPT=%JAVA_OPT% --spring.config.location="%CUSTOM_SEARCH_LOCATIONS%""
 set "JAVA_OPT=%JAVA_OPT% --logging.config="%BASE_DIR%\conf\nacos-logback.xml""
 
